force-app/main/default/objects/Payslipbank__c/Payslipbank__c.object-meta.xml
<CustomObject>
    <label>Payslip+Bank</label>
    <nameField>
        <displayFormat>PSB-{000000}</displayFormat>
        <label>PAYSLIP+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payslip+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>