force-app/main/default/objects/Payslipbank__c/fields/BankRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>BankRollupStatus__c</fullName>
    <label>BANK ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>