force-app/main/default/objects/Payslipbank__c/fields/BankTransactionID__c.field-meta.xml
<CustomField>
    <fullName>BankTransactionID__c</fullName>
    <label>BANK TRANSACTION ID</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>PAYSLIP+BANK</relationshipLabel>
    <relationshipName>PayslipBank</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>