force-app/main/default/objects/Payslipbank__c/fields/UnpaidBalUnpaidBalOfPayslipBank__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalUnpaidBalOfPayslipBank__c</fullName>
    <label>UNPAID BALANCE OF PAYSLIP-BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>